--- a/index.html
+++ b/index.html
@@ -44,10 +44,7 @@ Guanzhuang,Chaoyang District, Beijing ,100024</p>
 <h1>
 <a id="profile" class="anchor" href="#profile" aria-hidden="true"><span class="octicon octicon-link"></span></a>Profile</h1>
 
-<p>Age, 24 
-Gender, female 
-Major, International Economics&amp;Trade 
-Graduate in School of Economics, Southwest University for Nationalities </p>
+<p>Age, 24 <br>Gender, female <br>Major, International Economics&amp;Trade<br>Graduate in School of Economics, Southwest University for Nationalities </p>
 
 <h1>
 <a id="languages" class="anchor" href="#languages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Languages</h1>
