--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
         <h1>
 <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h1>
 
-<p>135-2223-4451(mobile)<br> <a href="mailto:imlixiaofan@163.com">imlixiaofan@163.com</a>
-Guanzhuang,Chaoyang District, Beijing ,100024</p>
+<p>135-2223-4451(mobile)<br> <a href="mailto:imlixiaofan@163.com">imlixiaofan@163.com(e-mail)</a><br>Guanzhuang,Chaoyang District, Beijing ,100024</p>
 
 <h1>
 <a id="profile" class="anchor" href="#profile" aria-hidden="true"><span class="octicon octicon-link"></span></a>Profile</h1>
