--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <section>
         <div id="title">
-          <h1>Lixiaoqin</h1>
+          <h1>Xiaoqin Li</h1>
           <p>My resume</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/lixiaoqin01">lixiaoqin01</a></span>
