Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Xiaoqin Li by lixiaoqin01</title>
+    <title>Xiaoqin Li by ilxq</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -20,7 +20,7 @@
   <body>
       <div id="header">
         <nav>
-          <li class="fork"><a href="https://github.com/lixiaoqin01">View On GitHub</a></li>
+          <li class="fork"><a href="https://github.com/ilxq">View On GitHub</a></li>
         </nav>
       </div><!-- end header -->
 
@@ -31,32 +31,36 @@
           <h1>Xiaoqin Li</h1>
           <p>My resume</p>
           <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/lixiaoqin01">lixiaoqin01</a></span>
-          
+          <span class="credits left">Project maintained by <a href="https://github.com/ilxq">ilxq</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 
         <h1>
-<a id="contact" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h1>
+<a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact</h1>
 
-<p>135-2223-4451(mobile)<br> <a href="mailto:imlixiaofan@163.com">imlixiaofan@163.com(e-mail)</a><br>Guanzhuang,Chaoyang District, Beijing ,100024</p>
-
-<h1>
-<a id="profile" class="anchor" href="#profile" aria-hidden="true"><span class="octicon octicon-link"></span></a>Profile</h1>
-
-<p>Age, 24 <br>Gender, female <br>Major, International Economics&amp;Trade<br>Graduate in School of Economics, Southwest University for Nationalities </p>
+<p>135-2223-4451(mobile) <a href="mailto:imlixiaofan@163.com">imlixiaofan@163.com</a>
+Guanzhuang,Chaoyang District, Beijing ,100024</p>
 
 <h1>
-<a id="languages" class="anchor" href="#languages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Languages</h1>
+<a id="profile" class="anchor" href="#profile" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Profile</h1>
+
+<p>Age, 24 
+Gender, female 
+Major, International Economics&amp;Trade 
+Graduate in School of Economics, Southwest University for Nationalities </p>
+
+<h1>
+<a id="languages" class="anchor" href="#languages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Languages</h1>
 
 <p>Fluent Mandarin Good written, reading and oral English (BEC, CET-6) Good Cantonese</p>
 
 <h1>
-<a id="technical-summary" class="anchor" href="#technical-summary" aria-hidden="true"><span class="octicon octicon-link"></span></a>Technical Summary</h1>
+<a id="technical-summary" class="anchor" href="#technical-summary" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Technical Summary</h1>
 
 <p>Skilled in Microsoft Outlook, Microsoft office , photoshop, studying in Python&amp;R</p>
 
 <h1>
-<a id="work-experience" class="anchor" href="#work-experience" aria-hidden="true"><span class="octicon octicon-link"></span></a>Work Experience</h1>
+<a id="work-experience" class="anchor" href="#work-experience" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Work Experience</h1>
 
 <ul>
 <li>Cashier for Guigang Guangxi Transportation Investment Construction Co., Ltd. Responsible for corporate accounting between accounts receivable, accounts payable and accounts diary accounts. Applying advance payment for project. Also in charge of workers’ insurance guarantees and allowance.</li>
@@ -64,12 +68,12 @@
 </ul>
 
 <h1>
-<a id="interests" class="anchor" href="#interests" aria-hidden="true"><span class="octicon octicon-link"></span></a>Interests</h1>
+<a id="interests" class="anchor" href="#interests" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Interests</h1>
 
 <p>Fancy of sports, outdoor, biking, backpack traveling, reading</p>
 
 <h1>
-<a id="personal-statements" class="anchor" href="#personal-statements" aria-hidden="true"><span class="octicon octicon-link"></span></a>Personal Statements</h1>
+<a id="personal-statements" class="anchor" href="#personal-statements" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Personal Statements</h1>
 
 <p>I am a person of discipline, conscientious and goal-oriented, eager to learn, able to adapt to new environments. I am a good team member, with willing to share news.</p>
       </section>
