--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h1>
 <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact</h1>
 
-<p>135-2223-4451(mobile) <a href="mailto:imlixiaofan@163.com">imlixiaofan@163.com</a>
+<p>135-2223-4451(mobile)| <a href="mailto:imlixiaofan@163.com">imlixiaofan@163.com(e-mail)|</a>
 Guanzhuang,Chaoyang District, Beijing ,100024</p>
 
 <h1>
