--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <h1>
 <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact</h1>
 
-<p>135-2223-4451(mobile)| <a href="mailto:imlixiaofan@163.com">imlixiaofan@163.com(e-mail)|</a>
-Guanzhuang,Chaoyang District, Beijing ,100024</p>
+<p>135-2223-4451(mobile)| <a href="mailto:imlixiaofan@163.com">imlixiaofan@163.com</a>
+|Chaoyang District, Beijing </p>
 
 <h1>
 <a id="profile" class="anchor" href="#profile" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Profile</h1>
