--- a/index.html
+++ b/index.html
@@ -42,12 +42,10 @@
 |Chaoyang District, Beijing </p>
 
 <h1>
-<a id="profile" class="anchor" href="#profile" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Profile</h1>
+<a id="Education" class="anchor" href="#Education" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Profile</h1>
 
-<p>Age, 24 
-Gender, female 
-Major, International Economics&amp;Trade 
-Graduate in School of Economics, Southwest University for Nationalities </p>
+<p> 
+Southwest University for Nationalities. Major in International Economics&amp;Trade. Graduated: July 2013 </p>
 
 <h1>
 <a id="languages" class="anchor" href="#languages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Languages</h1>
