--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 |Chaoyang District, Beijing </p>
 
 <h1>
-<a id="Education" class="anchor" href="#Education" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Profile</h1>
+<a id="Education" class="anchor" href="#Education" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Education</h1>
 
 <p> 
 Southwest University for Nationalities. Major in International Economics&amp;Trade. Graduated: July 2013 </p>
