--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <a id="Education" class="anchor" href="#Education" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Education</h1>
 
 <p> 
-Southwest University for Nationalities. Major in International Economics&amp;Trade. Graduated: July 2013 </p>
+Southwest University for Nationalities. Major in International Economics&amp;Trade. <br>Graduated: July 2013 </p>
 
 <h1>
 <a id="languages" class="anchor" href="#languages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Languages</h1>
