Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <h1>
 <a id="基本信息" class="anchor" href="#%E5%9F%BA%E6%9C%AC%E4%BF%A1%E6%81%AF" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>基本信息</h1>
 
-<p>电话：135-2223-4451        E-mail：<a href="mailto:ilixiaoqin@163.com">ilixiaoqin@163.com</a></p>
+<p>电话：135-2223-4451 | E-mail：<a href="mailto:ilixiaoqin@163.com">ilixiaoqin@163.com</a></p>
 
 <h1>
 <a id="个人网站ilxqgithubio特长展示持续更新中" class="anchor" href="#%E4%B8%AA%E4%BA%BA%E7%BD%91%E7%AB%99ilxqgithubio%E7%89%B9%E9%95%BF%E5%B1%95%E7%A4%BA%E6%8C%81%E7%BB%AD%E6%9B%B4%E6%96%B0%E4%B8%AD" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>个人网站：ilxq.github.io（特长展示持续更新中）</h1>
@@ -96,8 +96,10 @@ Good Cantonese</p>
 <h1>
 <a id="work-experience" class="anchor" href="#work-experience" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Work Experience:</h1>
 
-<p> Cashier for Guigang Guangxi Transportation Investment Construction Co., Ltd. Responsible for corporate accounting between accounts receivable, accounts payable and accounts diary accounts. Applying advance payment for project. Also in charge of workers’ insurance guarantees and allowance.
- Trade commisioner cum Bid Commissioner for Top Ten medical equipment company in Guangxi Province. Responsible for processing orders and data analysis. 95% of winning the bidding and made 3 million RMB contract amount in the year of 2014. </p>
+<ul>
+<li>Cashier for Guigang Guangxi Transportation Investment Construction Co., Ltd. Responsible for corporate accounting between accounts receivable, accounts payable and accounts diary accounts. Applying advance payment for project. Also in charge of workers’ insurance guarantees and allowance.</li>
+<li>Trade commisioner cum Bid Commissioner for Top Ten medical equipment company in Guangxi Province. Responsible for processing orders and data analysis. 95% of winning the bidding and made 3 million RMB contract amount in the year of 2014. </li>
+</ul>
 
 <h1>
 <a id="interests" class="anchor" href="#interests" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Interests:</h1>
