--- a/index.html
+++ b/index.html
@@ -29,22 +29,21 @@
       <section id="main_content" class="inner">
         <h2>
 <a id="李晓琴" class="anchor" href="#%E6%9D%8E%E6%99%93%E7%90%B4" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>李晓琴</h2>
+	<li><img src="images/pic9.jpg" alt="" width="60" height="80" /></li>
 
 <h1>
-<a id="求职意向" class="anchor" href="#%E6%B1%82%E8%81%8C%E6%84%8F%E5%90%91" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>求职意向</h1>
-
+<a id="求职意向" class="anchor" href="#%E6%B1%82%E8%81%8C%E6%84%8F%E5%90%91" aria-hidden="true"></a><strong>求职意向</strong></h1>
 <p>数据分析师 </p>
 
 <h1>
-<a id="基本信息" class="anchor" href="#%E5%9F%BA%E6%9C%AC%E4%BF%A1%E6%81%AF" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>基本信息</h1>
+<a id="基本信息" class="anchor" href="#%E5%9F%BA%E6%9C%AC%E4%BF%A1%E6%81%AF" aria-hidden="true"></a><strong>基本信息</strong></h1>
+
 
 <p>电话：135-2223-4451 | E-mail：<a href="mailto:ilixiaoqin@163.com">ilixiaoqin@163.com</a></p>
+<p>个人网站：ilxq.github.io（特长展示持续更新中）</p>
 
 <h1>
-<a id="个人网站ilxqgithubio特长展示持续更新中" class="anchor" href="#%E4%B8%AA%E4%BA%BA%E7%BD%91%E7%AB%99ilxqgithubio%E7%89%B9%E9%95%BF%E5%B1%95%E7%A4%BA%E6%8C%81%E7%BB%AD%E6%9B%B4%E6%96%B0%E4%B8%AD" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>个人网站：ilxq.github.io（特长展示持续更新中）</h1>
-
-<h1>
-<a id="教育背景" class="anchor" href="#%E6%95%99%E8%82%B2%E8%83%8C%E6%99%AF" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>教育背景</h1>
+  <a id="教育背景" class="anchor" href="#%E6%95%99%E8%82%B2%E8%83%8C%E6%99%AF" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>教育背景</h1>
 
 <p>2009年9月——2013年7月    西南民族大学  国际经济与贸易专业
 主修：国际贸易 商务英语 电子商务 统计学 财务管理 消费者行为学</p>
