--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <section id="main_content" class="inner">
         <h2>
 <a id="李晓琴" class="anchor" href="#%E6%9D%8E%E6%99%93%E7%90%B4" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>李晓琴</h2>
-	<li><img src="images/pic9.jpg" alt="" width="60" height="80" /></li>
+	<img src="images\pic9.jpg" width="70" height="90"  border="0"/>
 
 <h1>
 <a id="求职意向" class="anchor" href="#%E6%B1%82%E8%81%8C%E6%84%8F%E5%90%91" aria-hidden="true"></a><strong>求职意向</strong></h1>
