--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
 <li>2014年6月~2015年6月：
 在广西柳州华嘉医疗器械有限责任公司任前台销售，公司客户覆盖柳州市及周边近500家医疗单位，每月处理订单超过500份，金额超过40万元人民币。同时主导投标工作，负责医疗单位在柳州市的采购项目，投标金额超过300万，中标率达95%以上。期间主动分析客户群订货数据，向上级反馈异常客户信息，降低客户流失率。</li>
 <li>2013年6月~2014年5月：
-在广西贵港市交通投资有限公司财务部任出纳一职，负责公司各资金账户的维护及日常转账、收款、保函开立及保证金退还工作。同时负责公司人员五险一金的申报及撤销工作。
+在广西贵港市交通投资有限公司财务部任出纳一职，负责公司各资金账户的维护及日常转账、收款、保函开立及保证金退还工作。同时负责公司人员五险一金的申报及撤销工作。<br>
 #自我描述<br>
 数据分析爱好者，熟悉互联网、了解电子商务行业数据分析体系和指标，了解常用数据挖掘方法、模型和趋势；
 良好的数据敏感度，能从海量数据中提炼核心结果并形成专业报告，并针对业务指标提出改进意见；
 爱买，也是省钱小能手，有海淘经验。
-想对色魔张大妈说的：如果app加上喜爱物品推送功能就好了，其他咱们面谈！</li>
+</li>
 </ul>
 
 <h2>
