--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
 <li>2013年6月~2014年5月：
 在广西贵港市交通投资有限公司财务部任出纳一职，负责公司各资金账户的维护及日常转账、收款、保函开立及保证金退还工作。同时负责公司人员五险一金的申报及撤销工作。
 <h1>
-<a id="工作经历" class="anchor" href="#%E5%B7%A5%E4%BD%9C%E7%BB%8F%E5%8E%86" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>工作经历</h1>
-
+<a id="自我描述" class="anchor" href="#%E5%B7%A5%E4%BD%9C%E7%BB%8F%E5%8E%86" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>自我描述</h1>
+<p>
 数据分析爱好者，熟悉互联网、了解电子商务行业数据分析体系和指标，了解常用数据挖掘方法、模型和趋势；
 良好的数据敏感度，能从海量数据中提炼核心结果并形成专业报告，并针对业务指标提出改进意见；
 热爱学习，对新事物饱含热情，能快速适应新环境
-爱好烹饪、打网球、旅行</li>
+爱好烹饪、打网球、旅行</p></li>
 </ul>
 
 <h2>
