Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -60,18 +60,19 @@
 <a id="工作经历" class="anchor" href="#%E5%B7%A5%E4%BD%9C%E7%BB%8F%E5%8E%86" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>工作经历</h1>
 
 <ul>
-<li>2015年7月至今：
-在百灵鸽图书有限公司（PageOne书店）负责店面运营工作，每日结算支出，制作相关报表，分析销售数据及系统信息发现异常销售状况并报相关负责人排除。</li>
-<li>2014年6月~2015年6月：
-在广西柳州华嘉医疗器械有限责任公司任前台销售，公司客户覆盖柳州市及周边近500家医疗单位，每月处理订单超过500份，金额超过40万元人民币。同时主导投标工作，负责医疗单位在柳州市的采购项目，投标金额超过300万，中标率达95%以上。期间主动分析客户群订货数据，向上级反馈异常客户信息，降低客户流失率。</li>
-<li>2013年6月~2014年5月：
-在广西贵港市交通投资有限公司财务部任出纳一职，负责公司各资金账户的维护及日常转账、收款、保函开立及保证金退还工作。同时负责公司人员五险一金的申报及撤销工作。<br>
-<h1> 自我描述</h1><br>
-数据分析爱好者，熟悉互联网、了解电子商务行业数据分析体系和指标，了解常用数据挖掘方法、模型和趋势；
-良好的数据敏感度，能从海量数据中提炼核心结果并形成专业报告，并针对业务指标提出改进意见；
-热爱学习，对新事物有好奇心，能快速适应新环境；
-爱烹饪、打网球、旅行</li>
+<li><p>2014 年 6 月至今: 
+在广西华嘉医疗器械有限责任公司任商务专员一职, 负责公司在柳州市及周边300家医疗单位的订单, 跟进每份订单直至送货完成，并处理售后及商品证照准备工作。每月做客户订单分析，对客户订货量做预测，提前增减备货量。向上级反馈订货异常客户，减少公司损失。同时主导投标工作,负责医疗单位在柳州市的采购项目,投标金额超过300万,中标率达 95%以上。</p></li>
+<li><p>2013 年 6 月~2014 年 5 月: 
+在广西贵港市交通投资有限公司财务部任出纳一职,负责公司各资金账户的维护 及日常转账、收款、保函开立及投标保证金退还工作。同时负责公司人员社保福利的申报及撤销工作。</p></li>
 </ul>
+
+<h1>
+<a id="自我描述" class="anchor" href="#%E8%87%AA%E6%88%91%E6%8F%8F%E8%BF%B0" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>自我描述</h1>
+
+<p>数据爱好者，对数字有一定敏感度，处理复杂数据有耐心和恒心；
+了解电子商务行业数据分析体系和指标，了解常用数据挖掘方法、模型和趋势；
+计算机能力好，熟悉主流数据处理软件，同时对新软件上手快；
+有上进心，热爱电影、网球、烹饪及一切新奇事物。 </p>
 
 <h2>
 <a id="xiaoqin-li" class="anchor" href="#xiaoqin-li" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Xiaoqin Li</h2>
