--- a/index.html
+++ b/index.html
@@ -9,19 +9,25 @@
   <meta name="CocoaVersion" content="1404.46">
   <style type="text/css">
     p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 14.0px; font: 12.0px Times; color: #0000ee; -webkit-text-stroke: #0000ee}
-    p.p5 {margin: 0.0px 0.0px 12.0px 0.0px; line-height: 14.0px; font: 12.0px 'Songti SC'; color: #000000; -webkit-text-stroke: #000000}
-    p.p6 {margin: 0.0px 0.0px 12.0px 0.0px; line-height: 14.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
-    p.p7 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: justify; line-height: 19.0px; font: 12.0px SimSun}
-    p.p8 {margin: 0.0px 0.0px 12.0px 0.0px; line-height: 14.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000; min-height: 14.0px}
-    li.li5 {margin: 0.0px 0.0px 12.0px 0.0px; line-height: 14.0px; font: 12.0px 'Songti SC'; color: #000000; -webkit-text-stroke: #000000}
-    li.li9 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 14.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
+    p.p5 {margin: 0.0px 0.0px 12.0px 0.0px; line-height: 17.0px; font: 12.0px 'Songti SC'; color: #000000; -webkit-text-stroke: #000000}
+    p.p6 {margin: 0.0px 0.0px 12.0px 0.0px; line-height: 17.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
+    p.p7 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: justify; line-height: 14.0px; font: 12.0px SimSun; color: #000000; -webkit-text-stroke: #000000}
+    p.p8 {margin: 0.0px 0.0px 12.0px 0.0px; line-height: 14.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
+    p.p12 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: justify; line-height: 19.0px; font: 12.0px SimSun}
+    p.p13 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: justify; font: 12.0px SimSun}
+    li.li9 {margin: 0.0px 0.0px 12.0px 0.0px; line-height: 14.0px; font: 12.0px SimSun}
+    li.li10 {margin: 0.0px 0.0px 12.0px 0.0px; line-height: 18.0px; font: 12.0px SimSun}
+    li.li11 {margin: 0.0px 0.0px 12.0px 0.0px; line-height: 14.0px; font: 12.0px Times; color: #000000}
+    li.li14 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 14.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
     span.s1 {text-decoration: underline ; font-kerning: none}
     span.s2 {font-kerning: none}
     span.s3 {font: 12.0px Times; font-kerning: none}
     span.s4 {font: 12.0px 'Songti SC'; font-kerning: none}
     span.s5 {font: 12.0px Times; text-decoration: underline ; font-kerning: none; color: #0000ee; -webkit-text-stroke: 0px #0000ee}
-    span.s6 {font: 12.0px Times; -webkit-text-stroke: 0px #000000}
-    span.s7 {-webkit-text-stroke: 0px #000000}
+    span.s6 {font: 12.0px Times; color: #000000}
+    span.s7 {font-kerning: none; -webkit-text-stroke: 0px #000000}
+    span.s8 {font-kerning: none; color: #000000}
+    span.s9 {-webkit-text-stroke: 0px #000000}
     ul.ul1 {list-style-type: disc}
   </style>
 </head>
@@ -29,50 +35,57 @@
 <p class="p1"><span class="s1"><a href="https://github.com/ilxq">View on GitHub</a></span></p>
 <h1 style="margin: 0.0px 0.0px 16.1px 0.0px; line-height: 28.0px; font: 24.0px Times; color: #000000; -webkit-text-stroke: #000000"><span class="s2"><b>Xiaoqin Li</b></span></h1>
 <h2 style="margin: 0.0px 0.0px 14.9px 0.0px; line-height: 22.0px; font: 18.0px Times; color: #000000; -webkit-text-stroke: #000000"><span class="s2"><b>My resume</b></span></h2>
-<h2 style="margin: 0.0px 0.0px 14.9px 0.0px; line-height: 22.0px; font: 18.0px 'Songti SC'; color: #000000; -webkit-text-stroke: #000000"><span class="s2"><b>李晓琴</b></span></h2>
-<h1 style="margin: 0.0px 0.0px 14.9px 0.0px; line-height: 22.0px; font: 18.0px 'Songti SC'; color: #000000; -webkit-text-stroke: #000000"><span class="s2"><b>求职意向</b></span></h1>
+<h2 style="margin: 0.0px 0.0px 14.9px 0.0px; line-height: 25.0px; font: 18.0px 'Songti SC'; color: #000000; -webkit-text-stroke: #000000"><span class="s2"><b>李晓琴</b></span></h2>
+<h1 style="margin: 0.0px 0.0px 14.9px 0.0px; line-height: 25.0px; font: 18.0px 'Songti SC'; color: #000000; -webkit-text-stroke: #000000"><span class="s2"><b>求职意向</b></span></h1>
 <p class="p5"><span class="s2">数据分析师</span><span class="s3"><span class="Apple-converted-space"> </span></span></p>
-<h1 style="margin: 0.0px 0.0px 14.9px 0.0px; line-height: 22.0px; font: 18.0px 'Songti SC'; color: #000000; -webkit-text-stroke: #000000"><span class="s2"><b>基本信息</b></span></h1>
+<h1 style="margin: 0.0px 0.0px 14.9px 0.0px; line-height: 25.0px; font: 18.0px 'Songti SC'; color: #000000; -webkit-text-stroke: #000000"><span class="s2"><b>基本信息</b></span></h1>
 <p class="p6"><span class="s4">电话：</span><span class="s2">185-0060-7834 | E-mail</span><span class="s4">：<a href="mailto:ilixiaoqin@163.com"><span class="s5">ilixiaoqin@163.com</span></a></span><span class="s2"> | </span><span class="s4">个人网站：</span><span class="s2">ilxq.github.io</span></p>
-<h1 style="margin: 0.0px 0.0px 14.9px 0.0px; line-height: 22.0px; font: 18.0px 'Songti SC'; color: #000000; -webkit-text-stroke: #000000"><span class="s2"><b>教育背景</b></span></h1>
-<p class="p7">2009年9月——2013年7月 西南民族大学 国际经济与贸易 经济学学士</p>
-<p class="p7">主修：电子商务 统计学 财务管理 消费者行为学</p>
-<p class="p8"><span class="s2"></span><br></p>
-<h1 style="margin: 0.0px 0.0px 14.9px 0.0px; line-height: 22.0px; font: 18.0px 'Songti SC'; color: #000000; -webkit-text-stroke: #000000"><span class="s2"><b>英语水平</b></span></h1>
-<p class="p6"><span class="s2">CET-6/BEC-V</span></p>
-<h1 style="margin: 0.0px 0.0px 14.9px 0.0px; line-height: 22.0px; font: 18.0px 'Songti SC'; color: #000000; -webkit-text-stroke: #000000"><span class="s2"><b>主要技能</b></span></h1>
-<p class="p7">Python——会简单爬虫、利用相关库对数据进行清洗、索引、排序、制表和绘图。</p>
-<p class="p7">MySQL——能熟练对数据进行各类查询、分组和过滤。</p>
-<p class="p7">Excel——熟练操作统计相关函数、数据透视表和数据分析模块。</p>
-<p class="p7">Word、PPT——能熟练进行排版、报表编制操作。</p>
-<p class="p8"><span class="s2"></span><br></p>
-<h1 style="margin: 0.0px 0.0px 14.9px 0.0px; line-height: 22.0px; font: 18.0px 'Songti SC'; color: #000000; -webkit-text-stroke: #000000"><span class="s2"><b>工作经历</b></span></h1>
+<h1 style="margin: 0.0px 0.0px 14.9px 0.0px; line-height: 25.0px; font: 18.0px 'Songti SC'; color: #000000; -webkit-text-stroke: #000000"><span class="s2"><b>教育背景</b></span></h1>
+<p class="p7"><span class="s2">2009年9月——2013年7月 西南民族大学 国际经济与贸易 经济学学士</span></p>
+<p class="p7"><span class="s2">主修：电子商务 统计学 财务管理 消费者行为学</span></p>
+<p class="p8"><span class="s2"><br>
+</span></p>
+<h1 style="margin: 0.0px 0.0px 14.9px 0.0px; line-height: 25.0px; font: 18.0px 'Songti SC'; color: #000000; -webkit-text-stroke: #000000"><span class="s2"><b>英语水平</b></span></h1>
+<p class="p8"><span class="s2">CET-6/BEC-V</span></p>
+<h1 style="margin: 0.0px 0.0px 14.9px 0.0px; line-height: 25.0px; font: 18.0px 'Songti SC'; color: #000000; -webkit-text-stroke: #000000"><span class="s2"><b>主要技能</b></span></h1>
+<p class="p7"><span class="s2">Python——会简单爬虫、利用相关库对数据进行清洗、索引、排序、制表和绘图。</span></p>
+<p class="p7"><span class="s2">MySQL——能熟练对数据进行各类查询、分组和过滤。</span></p>
+<p class="p7"><span class="s2">Excel——熟练操作统计相关函数、数据透视表和数据分析模块。</span></p>
+<p class="p7"><span class="s2">Word、PPT——能熟练进行排版、报表编制操作。</span></p>
+<p class="p8"><span class="s2"><br>
+</span></p>
+<h1 style="margin: 0.0px 0.0px 14.9px 0.0px; line-height: 25.0px; font: 18.0px 'Songti SC'; color: #000000; -webkit-text-stroke: #000000"><span class="s2"><b>工作经历</b></span></h1>
 <ul class="ul1">
-  <li class="li5"><span class="s6"></span><span class="s3">2014 </span><span class="s2">年</span><span class="s3"> 6 </span><span class="s2">月至今</span><span class="s3">: </span><span class="s2">在广西华嘉医疗器械有限责任公司任商务专员一职</span><span class="s3">, </span><span class="s2">负责公司在柳州市及周边</span><span class="s3">300</span><span class="s2">家医疗单位的订单</span><span class="s3">, </span><span class="s2">跟进每份订单直至送货完成，并处理售后及商品证照准备工作。每月做客户订单分析，对客户订货量做预测，提前增减备货量。向上级反馈订货异常客户，减少公司损失。同时主导投标工作</span><span class="s3">,</span><span class="s2">负责医疗单位在柳州市的采购项目</span><span class="s3">,</span><span class="s2">投标金额超过</span><span class="s3">300</span><span class="s2">万</span><span class="s3">,</span><span class="s2">中标率达</span><span class="s3"> 95%</span><span class="s2">以上。</span><span class="s3"><br>
-</span></li>
-  <li class="li5"><span class="s6"></span><span class="s3">2013 </span><span class="s2">年</span><span class="s3"> 6 </span><span class="s2">月</span><span class="s3">~2014 </span><span class="s2">年</span><span class="s3"> 5 </span><span class="s2">月</span><span class="s3">: </span><span class="s2">在广西贵港市交通投资有限公司财务部任出纳一职</span><span class="s3">,</span><span class="s2">负责公司各资金账户的维护</span><span class="s3"> </span><span class="s2">及日常转账、收款、保函开立及投标保证金退还工作。同时负责公司人员社保福利的申报及撤销工作。</span><span class="s3"><br>
+  <li class="li9"><span class="s6"></span>2014 年 6 月至今:<span class="Apple-converted-space"> </span></li>
+  <li class="li10">在广西华尔科技有限公司任商务专员一职, 负责接单、下单、安排发货、跟进物流及售后。定期对ERP系统的数据做客户订单分析，监测客户订货量变动情况，向其他部门反馈订货量异常情况，减少公司损失。对库存变动做预测，提前增减备货量。收集、整理售后问题，改善运营流程。</li>
+  <li class="li10">2013 年 6 月~2014 年 5 月:<span class="Apple-converted-space"> </span></li>
+  <li class="li10">在广西贵港市交通投资有限公司财务部任出纳一职,负责公司各资金账户的维护 及日常转账、收款、保函开立及投标保证金退还工作。同时负责公司人员社保福利的申报及撤销工作。</li>
+  <li class="li11"><span class="s7"><br>
 </span></li>
 </ul>
-<h1 style="margin: 0.0px 0.0px 14.9px 0.0px; line-height: 22.0px; font: 18.0px 'Songti SC'; color: #000000; -webkit-text-stroke: #000000"><span class="s2"><b>自我描述</b></span></h1>
-<p class="p5"><span class="s2">数据爱好者，对数字有一定敏感度，处理复杂数据有耐心和恒心；</span><span class="s3"> </span><span class="s2">了解电子商务行业数据分析体系和指标，了解常用数据挖掘方法、模型和趋势；</span><span class="s3"> </span><span class="s2">计算机能力好，熟悉主流数据处理软件，同时对新软件上手快；</span><span class="s3"> </span><span class="s2">有上进心，热爱电影、网球、烹饪及一切新奇事物。</span><span class="s3"><span class="Apple-converted-space"> </span></span></p>
+<h1 style="margin: 0.0px 0.0px 14.9px 0.0px; line-height: 25.0px; font: 18.0px 'Songti SC'; color: #000000; -webkit-text-stroke: #000000"><span class="s2"><b>自我描述</b></span></h1>
+<p class="p12">对数字有敏感度，处理复杂数据冷静、有逻辑性。</p>
+<p class="p12">善于揣摩用户行为习惯和需求，能对运营流程提出相应改善意见。</p>
+<p class="p12">表达能力强、能对数据分析结果制作报表以及可视化展示。</p>
+<p class="p13">有上进心，愿意尝试新事物，爱好读书和户外运动。</p>
 <h2 style="margin: 0.0px 0.0px 14.9px 0.0px; line-height: 22.0px; font: 18.0px Times; color: #000000; -webkit-text-stroke: #000000"><span class="s2"><b>Xiaoqin Li</b></span></h2>
-<p class="p6"><span class="s2">135-2223-4451(mobile) | <a href="mailto:ilixiaoqin@163.com"><span class="s5">ilixiaoqin@163.com</span></a><br>
-Chaoyang District, Beijing, 100024 ilxq.github.io (personal website)</span></p>
+<p class="p6"><span class="s8">185-0060-7834</span><span class="s2">(mobile) | <a href="mailto:ilixiaoqin@163.com"><span class="s5">ilixiaoqin@163.com</span></a><br>
+Chaoyang District, Beijing, 100024 </span><span class="s8">| </span><span class="s2">ilxq.github.io (personal website)</span></p>
 <h1 style="margin: 0.0px 0.0px 14.9px 0.0px; line-height: 22.0px; font: 18.0px Times; color: #000000; -webkit-text-stroke: #000000"><span class="s2"><b>Profile:</b></span></h1>
-<p class="p6"><span class="s2">Age, 25 Gender, female Major, International Economics&amp;Trade Graduate in School of Economics, Southwest University for Nationalities</span></p>
+<p class="p8"><span class="s2">Age, 25 Gender, female Major, International Economics&amp;Trade Graduate in School of Economics, Southwest University for Nationalities</span></p>
 <h1 style="margin: 0.0px 0.0px 14.9px 0.0px; line-height: 22.0px; font: 18.0px Times; color: #000000; -webkit-text-stroke: #000000"><span class="s2"><b>Languages:</b></span></h1>
-<p class="p6"><span class="s2">Fluent Mandarin Good written, reading and oral English (BEC, CET-6) Good Cantonese</span></p>
+<p class="p8"><span class="s2">Fluent Mandarin Good written, reading and oral English (BEC, CET-6) Good Cantonese</span></p>
 <h1 style="margin: 0.0px 0.0px 14.9px 0.0px; line-height: 22.0px; font: 18.0px Times; color: #000000; -webkit-text-stroke: #000000"><span class="s2"><b>Technical Summary:</b></span></h1>
-<p class="p6"><span class="s2">Python(Pandas library), R, Access, MySQL, Excel</span><span class="s4">、</span><span class="s2">PPT</span><span class="s4">、</span><span class="s2">Word, Photoshop</span></p>
+<p class="p8"><span class="s2">Python(Pandas library), R, Access, MySQL, Excel</span><span class="s4">、</span><span class="s2">PPT</span><span class="s4">、</span><span class="s2">Word, Photoshop</span></p>
 <h1 style="margin: 0.0px 0.0px 14.9px 0.0px; line-height: 22.0px; font: 18.0px Times; color: #000000; -webkit-text-stroke: #000000"><span class="s2"><b>Work Experience:</b></span></h1>
 <ul class="ul1">
-  <li class="li9"><span class="s7"></span><span class="s2">Cashier for Guigang Guangxi Transportation Investment Construction Co., Ltd. Responsible for corporate accounting between accounts receivable, accounts payable and accounts diary accounts. Applying advance payment for project. Also in charge of workers’ insurance guarantees and allowance.</span></li>
-  <li class="li9"><span class="s7"></span><span class="s2">Trade commisioner cum Bid Commissioner for Top Ten medical equipment company in Guangxi Province. Responsible for processing orders and data analysis. 95% of winning the bidding and made 3 million RMB contract amount in the year of 2014.<span class="Apple-converted-space"> </span></span></li>
+  <li class="li14"><span class="s9"></span><span class="s2">Cashier for Guigang Guangxi Transportation Investment Construction Co., Ltd. Responsible for corporate accounting between accounts receivable, accounts payable and accounts diary accounts. Applying advance payment for project. Also in charge of workers’ insurance guarantees and allowance.</span></li>
+  <li class="li14"><span class="s9"></span><span class="s2">Trade commisioner cum Bid Commissioner for Top Ten medical equipment company in Guangxi Province. Responsible for processing orders and data analysis. 95% of winning the bidding and made 3 million RMB contract amount in the year of 2014.<span class="Apple-converted-space"> </span></span></li>
 </ul>
 <h1 style="margin: 0.0px 0.0px 14.9px 0.0px; line-height: 22.0px; font: 18.0px Times; color: #000000; -webkit-text-stroke: #000000"><span class="s2"><b>Interests:</b></span></h1>
-<p class="p6"><span class="s2">Fancy of sports, outdoor, biking, backpack traveling, reading</span></p>
+<p class="p8"><span class="s2">Fancy of sports, outdoor, biking, backpack traveling, reading</span></p>
 <h1 style="margin: 0.0px 0.0px 14.9px 0.0px; line-height: 22.0px; font: 18.0px Times; color: #000000; -webkit-text-stroke: #000000"><span class="s2"><b>Personal statements:</b></span></h1>
-<p class="p6"><span class="s2">I am a person of discipline, conscientious and goal-oriented, eager to learn, able to adapt to new environments. I am a good team member, with willing to share news.</span></p>
-<p class="p6"><span class="s2">Published with <a href="https://pages.github.com/"><span class="s5">GitHub Pages</span></a></span></p>
+<p class="p8"><span class="s2">I am a person of discipline, conscientious and goal-oriented, eager to learn, able to adapt to new environments. I am a good team member, with willing to share news.</span></p>
+<p class="p8"><span class="s2">Published with <a href="https://pages.github.com/"><span class="s5">GitHub Pages</span></a></span></p>
 </body>
 </html>
