--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <h1>
 <a id="基本信息" class="anchor" href="#%E5%9F%BA%E6%9C%AC%E4%BF%A1%E6%81%AF" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>基本信息</h1>
 
-<p>电话：185-0060-7834 | E-mail：<a href="mailto:ilixiaoqin@163.com">ilixiaoqin@163.com</a> | 个人作品：<a href="http://dwz.cn/">http://dwz.cn/</a> jianshu-sherryup</p>
+<p>电话：185-0060-7834 | E-mail：<a href="mailto:ilixiaoqin@163.com">ilixiaoqin@163.com</a> | 个人作品：<a href="http://dwz.cn/">http://dwz.cn/jianshu-sherryup</a></p>
 
 <h1>
 <a id="教育背景" class="anchor" href="#%E6%95%99%E8%82%B2%E8%83%8C%E6%99%AF" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>教育背景</h1>
